<resources>
    <string name="app_name">Writer\'s Diary</string>
    <string name="item_image">itemImage</string>
    <string name="my_clients">My Clients</string>
    <string name="my_writers">My Writers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="who_number">(%d)</string>
    <string name="view">View</string>
    <string name="add_writer">addWriter</string>
    <string name="no_writers">No writers Yet, Click Button Below to Add Writers</string>
    <string name="no_clients">No Clients Yet, Click Button Below to Add Clients</string>
    <string name="writers_fragment_title">Writers</string>
    <string name="home_fragment_title">Home</string>
    <string name="enter_name">Enter First and Last Names</string>
    <string name="add">Add</string>
    <string name="new_writer">New Writer</string>
    <string name="client_fragment_title">Clients</string>
    <string name="task_title">Business Assignment</string>
    <string name="point_to_amount">Amount Payable </string>
    <string name="point_to_pages">Pages: </string>
    <string name="point_to_words">Words: </string>
    <string name="status">Status</string>
    <string name="delete">delete</string>
    <string name="edit_icon">edit_icon</string>
    <string name="writer_has_no_tasks">Writer has No tasks</string>
    <string name="add_task">Add Task</string>
    <string name="no_client_tasks">You have no tasks from this Client</string>
    <string name="task_title_label">Task Title</string>
    <string name="enter_task_title">Business Assignment</string>
    <string name="order_label">Order Number</string>
    <string name="enter_order_number">BSL201</string>
    <string name="word_count">Word Count</string>
    <string name="enter_word_count">3000</string>
    <string name="submit">Submit</string>
    <string name="new_task_to_writer">New Writer Task</string>
    <string name="client_tasks_fragment_title">Client\'s Tasks</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="enter_amount_in_dollars">Enter amount in dollars</string>
    <string name="paid">Paid</string>
    <string name="complete">Complete</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="about_app">Writer\'s Diary App is a tool for online writers across all categories</string>
    <string name="about">About</string>
    <string name="update_task">Update Task</string>
    <string name="writer_tasks">Writer\'s Tasks</string>
    <string name="new_task">New Task</string>
    <string name="new_client">New Client</string>
    <string name="share">Share</string>
    <string name="pending_tasks">Pending ( %d )</string>
    <string name="delete_all">Delete All</string>
    <string name="clear_all_data">Clear All Data</string>
    <string name="_delete">Delete</string>
    <string name="edit">Edit</string>
</resources>