<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/very_small_space"
        android:background="@drawable/gray_800_round_corner_background">

        <CheckBox
            android:id="@+id/is_paid_checkbox"
            style="@style/bold_text_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_space"
            android:text="@string/paid"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/is_complete_checkbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/is_complete_checkbox"
            app:layout_constraintTop_toTopOf="@+id/is_complete_checkbox" />

        <CheckBox
            android:id="@+id/is_complete_checkbox"
            style="@style/bold_text_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.72"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amt_payable_edit_text"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/task_title_label"
            style="@style/bold_text_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/wide_space"
            android:background="@drawable/gray_round_corner_background"
            android:text="@string/task_title_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/amt_payable_label"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/amt_payable_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/point_to_word_count"
            style="@style/bold_text_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/wide_space"
            android:background="@drawable/gray_round_corner_background"
            android:text="@string/word_count"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/amt_payable_label"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/amt_payable_label"
            app:layout_constraintTop_toBottomOf="@+id/task_title_label"
            app:layout_constraintVertical_bias="0.050000012" />

        <TextView
            android:id="@+id/amt_payable_label"
            style="@style/bold_text_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/wide_space"
            android:background="@drawable/gray_round_corner_background"
            android:text="@string/point_to_amount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/point_to_word_count"
            app:layout_constraintVertical_bias="0.06999999" />

        <EditText
            android:id="@+id/amt_payable_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/wide_space"
            android:background="@drawable/white_round_corner_background"
            android:ems="10"
            android:hint="@string/enter_amount_in_dollars"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="@+id/amt_payable_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/amt_payable_label"
            app:layout_constraintTop_toBottomOf="@+id/word_count_editText"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/word_count_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/wide_space"
            android:background="@drawable/white_round_corner_background"
            android:ems="10"
            android:hint="@string/enter_word_count"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/point_to_word_count"
            app:layout_constraintTop_toBottomOf="@+id/title_edit_text"
            app:layout_constraintVertical_bias="0.00999999" />

        <EditText
            android:id="@+id/title_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/wide_space"
            android:background="@drawable/white_round_corner_background"
            android:ems="10"
            android:hint="@string/task_title"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/task_title_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/update_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            style="@style/bold_text_black"
            android:padding="@dimen/medium_space"
            android:background="@drawable/white_round_corner_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/is_paid_checkbox"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/is_complete_checkbox"
            app:layout_constraintTop_toBottomOf="@+id/is_paid_checkbox" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
