<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment"
    android:orientation="vertical"
    android:background="@color/cardview_dark_background"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/wide_space"
        app:cardElevation="@dimen/medium_space"
        app:cardMaxElevation="@dimen/max_elevation"
        android:layout_margin="@dimen/medium_space"
        app:cardPreventCornerOverlap="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/clientImage"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/image_width"
                android:contentDescription="@string/item_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:src="@drawable/clients_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/who_text1"
                style="@style/whoTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_clients"
                app:layout_constraintBottom_toBottomOf="@id/clientImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/clientImage"
                app:layout_constraintTop_toTopOf="@+id/clientImage"
                tools:text="@string/my_clients" />

            <TextView
                android:id="@+id/numberOfClientsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/medium_space"
                android:layout_marginBottom="@dimen/medium_space"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/who_number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:text="(5)" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/wide_space"
        app:cardElevation="@dimen/medium_space"
        app:cardMaxElevation="@dimen/max_elevation"
        app:cardPreventCornerOverlap="true"
        android:layout_margin="@dimen/medium_space">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/writersImage"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/image_width"
                android:contentDescription="@string/item_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/writers_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/who_text"
                style="@style/whoTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_writers"
                app:layout_constraintBottom_toBottomOf="@id/writersImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/writersImage"
                app:layout_constraintTop_toTopOf="@+id/writersImage"
                tools:text="@string/my_writers" />

            <TextView
                android:id="@+id/numberOfWritersText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/medium_space"
                android:layout_marginBottom="@dimen/medium_space"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/who_number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:text="(5)" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
</layout>