<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="clientTask"
            type="com.devjay.writtersdiary.data.entities.ClientTask" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/medium_space"
        android:layout_marginTop="@dimen/very_small_space"
        app:cardBackgroundColor="@color/gray_500">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_margin="@dimen/medium_space">

            <TextView
                android:id="@+id/task_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:clientTaskTitle="@{clientTask}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/task_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/gray_round_corner_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_title"
                app:layout_constraintVertical_bias="0.35000002">

                <TextView
                    android:id="@+id/point_to_pages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/point_to_pages"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/page_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gray_800_round_corner_background"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:clientTaskPageCount="@{clientTask}"
                    app:layout_constraintBottom_toBottomOf="@+id/point_to_pages"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/point_to_pages"
                    app:layout_constraintTop_toTopOf="@+id/point_to_pages"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="10" />

                <TextView
                    android:id="@+id/point_to_words"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/point_to_words"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/point_to_pages"
                    app:layout_constraintVertical_bias="0.8" />

                <TextView
                    android:id="@+id/word_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gray_800_round_corner_background"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:clientTaskWordCount="@{clientTask}"
                    app:layout_constraintBottom_toBottomOf="@+id/point_to_words"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/point_to_words"
                    app:layout_constraintTop_toTopOf="@+id/point_to_words"
                    tools:text="3000" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/is_paid_text"
                    app:layout_constraintStart_toStartOf="@+id/is_complete_text"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.039" />

                <TextView
                    android:id="@+id/is_paid_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gray_800_round_corner_background"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:clientTaskIsPaid="@{clientTask}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/is_complete_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/page_count"
                    tools:text="Not Paid" />

                <TextView
                    android:id="@+id/is_complete_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gray_800_round_corner_background"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:clientTaskIsComplete="@{clientTask}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/is_paid_text"
                    app:layout_constraintHorizontal_bias="0.96"
                    app:layout_constraintStart_toEndOf="@+id/page_count"
                    app:layout_constraintTop_toBottomOf="@+id/textView16"
                    tools:text="Pending" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                app:clientTaskOrderNo="@{clientTask}"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_title"
                app:layout_constraintVertical_bias="1.0"
                tools:text="Order No: 12356" />

            <TextView
                android:id="@+id/date_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                app:clientTaskDateCreated="@{clientTask}"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/task_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:text="11/08/2021" />

            <TextView
                android:id="@+id/time_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:clientTaskTimeCreated="@{clientTask}"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/date_created"
                app:layout_constraintTop_toBottomOf="@+id/date_created"
                app:layout_constraintVertical_bias="0.0"
                tools:text="11:00" />

            <TextView
                android:id="@+id/amount_payable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_800_round_corner_background"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:clientTaskAmountPayable="@{clientTask}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                tools:text="$20" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_to_amount"
                android:textColor="@color/black"
                app:layout_constraintBaseline_toBaselineOf="@+id/amount_payable"
                app:layout_constraintEnd_toStartOf="@+id/amount_payable"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/icon_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                app:srcCompat="@android:drawable/ic_menu_edit"
                android:contentDescription="@string/edit_icon" />

            <ImageView
                android:id="@+id/icon_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toEndOf="@+id/icon_edit"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                app:srcCompat="@android:drawable/ic_menu_delete" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</layout>